[gd_scene load_steps=3 format=2]

[ext_resource path="res://Hit & Hurt Boxes/HurtBox.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 22.0227

[node name="HurtBox" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[connection signal="invincibility_ended" from="." to="." method="_on_HurtBox_invincibility_ended"]
[connection signal="invincibility_started" from="." to="." method="_on_HurtBox_invincibility_started"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
